syntax = "proto3";

option csharp_namespace = "EventService.Presentation.Grpc";


service HallSchemeGrpcService {
  rpc GetHallSchemeById(GetHallSchemeByIdRequest) returns (HallSchemeResponse);
  rpc GetVenueHallSchemes(GetVenueHallSchemesRequest) returns (HallSchemesList);
}

message GetHallSchemeByIdRequest {
  int64 hall_scheme_id = 1;
}

message GetVenueHallSchemesRequest {
  int64 venue_id = 1;
}

message HallSchemeResponse {
  int64 id = 1;
  int64 venue_id = 2;
  string name = 3;
  int32 rows = 4;
  int32 columns = 5;
}

message HallSchemesList {
  repeated HallSchemeResponse schemes = 1;
}